# dotnet

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Components.md  Directory.Build.props  Directory.Build.rsp  Directory.Build.sourcebuild.props  Directory.Build.sourcebuild.targets  Directory.Build.targets  Directory.Packages.props  NuGet.config  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  azure-pipelines.yml  build.cmd  build.proj  build.ps1  build.sh  build.sourcebuild.targets  global.json  prep-source-build.sh  prep.sh
.claude/: pr-comments-progress-6622.json
.config/: CredScanSuppressions.json  dotnet-tools.json  tsaoptions.json
.devcontainer/: README.md  devcontainer.json  init-toolset.sh  init.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  devops-health-config.json  milestone-config.json
docs/: Codeflow-PRs.md  Flat-Flow-Migration-Guide.md  Repository-Onboarding.md  TFM-Trimming-And-Targeting.md  VMR-Change-Target-Guide.md  VMR-Component-Analysis-README.md  VMR-Component-Analysis-Runtime-Targeting-Packs.md  VMR-Component-Analysis-Visual-Summary.md  VMR-Component-Targeting-Packs-Checklist.md  VMR-Component-Targeting-Packs-Quick-Reference.md  VMR-Controls.md  VMR-Design-And-Operation.md  VMR-Feature-Band-Support-Work-Plan.md  VMR-Feature-Band-Tooling-Constraints.md  VMR-Full-Code-Flow.md  VMR-Join-Point.md  VMR-Managing-SDK-Bands.md  VMR-Official-Build-Bar.md  VMR-Permissible-Sources.md  VMR-Product-Versioning.md  VMR-QB-Guide.md  VMR-Repo-and-VMR-Validation.md  VMR-Servicing-Workflows.md  VMR-Strategy-For-External-Source.md  VMR-re-bootstrapping.md  builds-table.md  unified-build-controls.md  unified-build-join-point.md
eng/: Build.props  Build.sourcebuild.props  GatherDrops.ps1  PublishSourceBuild.props  Publishing.props  RuntimeIdentifier.props  SignCheckExclusionsFile.txt  SymbolPublishingExclusionsFile.txt  Tests.targets  Tools.props  Version.Details.props  Version.Details.xml  Versions.props  VmrCommon.targets  VmrLayout.props  allowed-sb-binaries.txt  allowed-vmr-binaries.txt  build.ps1  clean-shared-components.proj  detect-binaries.sh  pack-sources.sh  (+20 more)
src/deployment-tools/src/clickonce/native/: CMakeLists.txt  build-native.proj  build.cmd  build.proj  build.sh
src/deployment-tools/src/clickonce/native/Windows/: gen-buildsys-win.bat
src/deployment-tools/src/clickonce/native/projects/: CMakeLists.txt  common.cmake  exe.cmake  lib.cmake  setup.cmake
src/deployment-tools/src/clickonce/native/projects/NetCoreCheck/: CMakeLists.txt  Logger.h  NetCoreCheck.cpp  NetCoreCheck.h  TempRuntimeConfigFile.cpp  TempRuntimeConfigFile.h
src/deployment-tools/src/clickonce/native/projects/NetCoreCheck/CA/: CMakeLists.txt  MsiLogger.cpp  MsiLogger.h  MsiWrapper.cpp  MsiWrapper.h  NetCoreCheckCA.cpp  NetCoreCheckCA.def  NetCoreCheckCA.h  version_info.h
src/deployment-tools/src/clickonce/native/projects/NetCoreCheck/EXE/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  NetCoreCheckExe.cpp  NetCoreCheckExe.h  version_info.h
(+20026 files in other folders)
